etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_init_containers-2.snap
---
source: etl-api/src/k8s/http.rs
expression: node_selector
---
[
  {
    "env": [
      {
        "name": "LOGFLARE_API_KEY",
        "valueFrom": {
          "secretKeyRef": {
            "key": "key",
            "name": "replicator-logflare-api-key"
          }
        }
      }
    ],
    "image": "public.ecr.aws/supabase/timberio/vector:0.55.0-distroless-libc",
    "name": "abcdefghijklmnopqrst-42-vector",
    "resources": {
      "limits": {
        "cpu": "150m",
        "memory": "230Mi"
      },
      "requests": {
        "cpu": "75m",
        "memory": "192Mi"
      }
    },
    "restartPolicy": "Always",
    "volumeMounts": [
      {
        "mountPath": "/etc/vector",
        "name": "vector-config-file"
      },
      {
        "mountPath": "/var/log",
        "name": "logs"
      }
    ]
  }
]
