etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_node_selector-3.snap
---
source: etl-api/src/k8s/http.rs
expression: node_selector
---
{
  "etl.supabase.com/node-role": "workloads"
}
