etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_postgres_secret_json.snap
---
source: etl-api/src/k8s/http.rs
expression: secret_json
---
{
  "apiVersion": "v1",
  "data": {
    "password": "dGVzdC1wYXNzd29yZA=="
  },
  "kind": "Secret",
  "metadata": {
    "name": "test-secret",
    "namespace": "etl-data-plane"
  },
  "type": "Opaque"
}
