etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_replicator_config_map_json.snap
---
source: etl-api/src/k8s/http.rs
expression: config_map_json
---
{
  "apiVersion": "v1",
  "data": {
    "base.json": "",
    "prod.json": "{\"destination\":{\"big_query\":{\"project_id\":\"project-id\",\"dataset_id\":\"dataset-id\",\"connection_pool_size\":4}},\"pipeline\":{\"id\":42,\"publication_name\":\"all-pub\",\"pg_connection\":{\"host\":\"localhost\",\"hostaddr\":\"1a02:d034:3b7:f202:1803:84ed:98f8:131c\",\"port\":5432,\"name\":\"postgres\",\"username\":\"postgres\",\"tls\":{\"trusted_root_certs\":\"\",\"enabled\":false},\"keepalive\":{\"idle_secs\":30,\"interval_secs\":10,\"retries\":3}},\"batch\":{\"max_fill_ms\":1000,\"memory_budget_ratio\":0.2},\"table_error_retry_delay_ms\":500,\"table_error_retry_max_attempts\":3,\"max_table_sync_workers\":4,\"max_copy_connections_per_table\":2,\"memory_refresh_interval_ms\":100,\"memory_backpressure\":{\"activate_threshold\":1.0,\"resume_threshold\":0.99},\"table_sync_copy\":{\"type\":\"include_all_tables\"},\"invalidated_slot_behavior\":\"error\"}}"
  },
  "kind": "ConfigMap",
  "metadata": {
    "labels": {
      "etl.supabase.com/app-name": "abcdefghijklmnopqrst-42-replicator-app",
      "etl.supabase.com/app-type": "etl-replicator-app"
    },
    "name": "abcdefghijklmnopqrst-42-replicator-config",
    "namespace": "etl-data-plane"
  }
}
