etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_tolerations-3.snap
---
source: etl-api/src/k8s/http.rs
expression: tolerations
---
[
  {
    "effect": "NoSchedule",
    "key": "nodeType",
    "operator": "Equal",
    "value": "workloads"
  }
]
