etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_volume_mounts-2.snap
---
source: etl-api/src/k8s/http.rs
expression: volume_mounts
---
[
  {
    "mountPath": "/app/configuration",
    "name": "replicator-config-file"
  },
  {
    "mountPath": "/app/logs",
    "name": "logs"
  }
]
